--- a/templates/emergente.html
+++ b/templates/emergente.html
@@ -11,7 +11,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #001f3f;
+            background-color: #001f3f; /* Fondo azul oscuro */
         }
 
         .emergente-container img {
@@ -24,7 +24,7 @@
     <script>
         // Redirigir automáticamente a la página principal después de 2 segundos
         setTimeout(function () {
-            window.location.href = "/";
+            window.location.href = "/principal";
         }, 2000);
     </script>
 </head>
